warning: 'xxx' may be used uninitialized in this function [-Wmaybe-uninitialized]
I just noticed these in the Fedora build log of gnome-shell 3.35.92:
In file included from /usr/lib64/glib-2.0/include/glibconfig.h:9,
from /usr/include/glib-2.0/glib/gtypes.h:32,
from /usr/include/glib-2.0/glib/galloca.h:32,
from /usr/include/glib-2.0/glib.h:30,
from /usr/include/glib-2.0/glib/gi18n.h:21,
from ../subprojects/extensions-tool/src/command-create.c:21:
../subprojects/extensions-tool/src/command-create.c: In function 'handle_create':
/usr/include/glib-2.0/glib/gmacros.h:1068:89: warning: 'templates' may be used uninitialized in this function [-Wmaybe-uninitialized]
1068 | static G_GNUC_UNUSED inline void _GLIB_AUTO_FUNC_NAME(TypeName) (TypeName *_ptr) { if (*_ptr != none) (func) (*_ptr); } \
| ^
../subprojects/extensions-tool/src/command-create.c:92:18: note: 'templates' was declared here
92 | g_auto (GStrv) templates;
In file included from /usr/lib64/glib-2.0/include/glibconfig.h:9,
from /usr/include/glib-2.0/glib/gtypes.h:32,
from /usr/include/glib-2.0/glib/galloca.h:32,
from /usr/include/glib-2.0/glib.h:30,
from /usr/include/glib-2.0/glib/gi18n-lib.h:21,
from ../src/shell-app.c:7:
../src/shell-app.c: In function 'shell_app_launch':
/usr/include/glib-2.0/glib/gmacros.h:1045:10: warning: 'gpu' may be used uninitialized in this function [-Wmaybe-uninitialized]
1045 | { if (_ptr) (cleanup) ((ParentName *) _ptr); } \
| ^
../src/shell-app.c:1298:27: note: 'gpu' was declared here
1298 | g_autoptr(GVariant) gpu;
| ^~~